refactoring: Builder for SendMessage