@@ -1,6 +1,7 @@
 package com.whiskels.telegrambot.bot.handler;
 
 import com.whiskels.telegrambot.bot.BotCommand;
+import com.whiskels.telegrambot.bot.builder.MessageBuilder;
 import com.whiskels.telegrambot.model.User;
 import com.whiskels.telegrambot.security.RequiredRoles;
 import lombok.extern.slf4j.Slf4j;
@@ -10,11 +11,9 @@ import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 import static com.whiskels.telegrambot.model.Role.ADMIN;
-import static com.whiskels.telegrambot.util.TelegramUtil.createMessageTemplate;
 
 /**
  * Shows current time on bot's server
@@ -32,9 +31,10 @@ public class AdminTimeHandler extends AbstractBaseHandler {
     @RequiredRoles(roles = ADMIN)
     public List<BotApiMethod<Message>> handle(User admin, String message) {
         log.debug("Preparing /ADMIN_TIME");
-        return Collections.singletonList(createMessageTemplate(admin)
-                .setText(String.format("*Bot current time*:%n%s%nServer hour offset is %d",
+        return List.of(MessageBuilder.create(admin)
+                .text("*Bot current time*:%n%s%nServer hour offset is %d",
                         LocalDateTime.now().toString(),
-                        serverHourOffset)));
+                        serverHourOffset)
+                .build());
     }
 }
