@@ -1,6 +1,7 @@
 package com.whiskels.telegrambot.bot.handler;
 
 import com.whiskels.telegrambot.bot.BotCommand;
+import com.whiskels.telegrambot.bot.builder.MessageBuilder;
 import com.whiskels.telegrambot.model.Customer;
 import com.whiskels.telegrambot.model.Role;
 import com.whiskels.telegrambot.model.User;
@@ -9,21 +10,20 @@ import com.whiskels.telegrambot.service.CustomerService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
-import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.whiskels.telegrambot.model.Role.*;
-import static com.whiskels.telegrambot.util.TelegramUtil.*;
+import static com.whiskels.telegrambot.util.TelegramUtil.DATE_TIME_FORMATTER;
+import static com.whiskels.telegrambot.util.TelegramUtil.EMPTY_LINE;
 
 /**
  * Sends current customer overdue debts information
- *
+ * <p>
  * Available to: Manager, Head, Admin
  */
 @Component
@@ -40,35 +40,29 @@ public class GetHandler extends AbstractBaseHandler {
     @RequiredRoles(roles = {MANAGER, HEAD, ADMIN})
     public List<BotApiMethod<Message>> handle(User user, String message) {
         log.debug("Preparing /GET");
-        SendMessage sendMessage = createMessageTemplate(user);
-
-        StringBuilder text = new StringBuilder();
-        text.append(String.format("Overdue debts on %s%n%n", DATE_TIME_FORMATTER.format(LocalDateTime.now().plusHours(3))));
+        MessageBuilder builder = MessageBuilder.create(user)
+                .text("Overdue debts on %s%n%n",
+                        DATE_TIME_FORMATTER.format(LocalDateTime.now().plusHours(3)));
+        String customerInfo = null;
         try {
-            StringBuilder list = new StringBuilder();
-
-            list.append(customerService.getCustomerList().stream()
+            customerInfo = customerService.getCustomerList().stream()
                     .filter(customer -> isValid(user, customer))
                     .map(Customer::toString)
                     .collect(Collectors.joining(String.format(
-                            "%s%s%s", END_LINE, EMPTY_LINE, END_LINE))));
-
-            if (list.length() == 0) {
-                list.append("No overdue debts");
-            }
-            text.append(list.toString());
+                            "%n%s%n", EMPTY_LINE)));
 
         } catch (Exception e) {
             log.error("Exception while creating message GET: {}", e.getMessage());
         }
-        sendMessage.setText(text.toString());
 
-        return Collections.singletonList(sendMessage);
+        builder.text(customerInfo == null ? "No overdue debts" : customerInfo);
+
+        return List.of(builder.build());
     }
 
     /**
      * Checks if user is verified to get information about selected customer
-     *
+     * <p>
      * true - if user is head or admin or is customer's account manager
      */
     private boolean isValid(User user, Customer customer) {
