@@ -1,6 +1,7 @@
 package com.whiskels.telegrambot.bot.handler;
 
 import com.whiskels.telegrambot.bot.BotCommand;
+import com.whiskels.telegrambot.bot.builder.MessageBuilder;
 import com.whiskels.telegrambot.model.Schedule;
 import com.whiskels.telegrambot.model.User;
 import com.whiskels.telegrambot.security.RequiredRoles;
@@ -10,20 +11,17 @@ import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Message;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.InlineKeyboardMarkup;
-import org.telegram.telegrambots.meta.api.objects.replykeyboard.buttons.InlineKeyboardButton;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static com.whiskels.telegrambot.model.Role.*;
 import static com.whiskels.telegrambot.util.ParsingUtil.getTime;
-import static com.whiskels.telegrambot.util.TelegramUtil.*;
+import static com.whiskels.telegrambot.util.TelegramUtil.extractArguments;
 
 /**
  * Adds schedule to the user and shows current schedule times
- *
+ * <p>
  * Available to: Manager, Head, Admin
  */
 @Component
@@ -44,8 +42,8 @@ public class ScheduleAddHandler extends AbstractScheduleHandler {
         }
 
         log.debug("Preparing /SCHEDULE (with args)");
-        SendMessage sendMessage = createMessageTemplate(user);
-        StringBuilder text = new StringBuilder();
+
+        MessageBuilder builder = MessageBuilder.create(user);
         try {
             List<Integer> time = getTime(extractArguments(message));
             final int hours = time.get(0);
@@ -54,50 +52,40 @@ public class ScheduleAddHandler extends AbstractScheduleHandler {
             log.debug("Adding schedule {}:{} to {}", hours, minutes, user.getChatId());
 
             scheduleService.addSchedule(new Schedule(hours, minutes, null), user.id());
-            text.append("Scheduled status messages to").append(END_LINE)
-                    .append("be sent daily at ")
-                    .append(String.format("*%02d:%02d*%n", hours, minutes));
-
+            builder.text("Scheduled status messages to%nbe sent daily at *%02d:%02d*%n",
+                    hours, minutes);
         } catch (Exception e) {
-            text.append("You've entered invalid time")
-                    .append(END_LINE)
-                    .append("Please try again");
+            builder.text("You've entered invalid time%nPlease try again");
             log.debug("Incorrect schedule time {}", message);
         }
 
-        sendMessage.setText(text.toString());
-        return Collections.singletonList(sendMessage);
+        return List.of(builder.build());
     }
 
     /**
      * Returns predefined list of options and information on empty command
      */
     private SendMessage inlineKeyboardMessage(User user) {
-        InlineKeyboardMarkup inlineKeyboardMarkup = new InlineKeyboardMarkup();
+        String scheduleSizeMessage = "No messages scheduled";
 
-        List<InlineKeyboardButton> inlineKeyboardButtonsRowOne = List.of(
-                createInlineKeyboardButton("9:00", "/SCHEDULE", true),
-                createInlineKeyboardButton("12:00", "/SCHEDULE", true),
-                createInlineKeyboardButton("15:00", "/SCHEDULE", true));
-
-        inlineKeyboardMarkup.setKeyboard(List.of(inlineKeyboardButtonsRowOne, SCHEDULE_MANAGE_ROW));
-
-        StringBuilder text = new StringBuilder();
-        text.append("*Your current schedule:*")
-                .append(END_LINE);
         final List<Schedule> schedule = scheduleService.getSchedule(user.getChatId());
-        if (schedule == null || schedule.isEmpty()) {
-            text.append("No messages scheduled");
-        } else {
-            text.append(schedule.stream()
+        if (schedule != null && !schedule.isEmpty()) {
+            scheduleSizeMessage = schedule.stream()
                     .map(e -> String.format("%02d:%02d", e.getHour(), e.getMinutes()))
-                    .collect(Collectors.joining(", ")));
+                    .collect(Collectors.joining(", "));
         }
-        text.append(END_LINE)
-                .append(END_LINE)
-                .append("Choose from available options or add preferred time to [/schedule](/schedule) command:");
 
-        return createMessageTemplate(user).setText(text.toString())
-                .setReplyMarkup(inlineKeyboardMarkup);
+        return MessageBuilder.create(user)
+                .text("*Your current schedule:*%n%s%n%n" +
+                                "Choose from available options or add preferred time to [/schedule](/schedule) command:",
+                        scheduleSizeMessage)
+                .row()
+                .buttonWithArguments("9:00", "/SCHEDULE")
+                .buttonWithArguments("12:00", "/SCHEDULE")
+                .buttonWithArguments("15:00", "/SCHEDULE")
+                .row()
+                .button("Clear schedule", "/SCHEDULE_CLEAR")
+                .button("Help", "/SCHEDULE_HELP")
+                .build();
     }
 }
