@@ -1,6 +1,7 @@
 package com.whiskels.telegrambot.bot.handler;
 
 import com.whiskels.telegrambot.bot.BotCommand;
+import com.whiskels.telegrambot.bot.builder.MessageBuilder;
 import com.whiskels.telegrambot.model.User;
 import com.whiskels.telegrambot.security.RequiredRoles;
 import com.whiskels.telegrambot.service.ScheduleService;
@@ -9,15 +10,13 @@ import org.springframework.stereotype.Component;
 import org.telegram.telegrambots.meta.api.methods.BotApiMethod;
 import org.telegram.telegrambots.meta.api.objects.Message;
 
-import java.util.Collections;
 import java.util.List;
 
 import static com.whiskels.telegrambot.model.Role.*;
-import static com.whiskels.telegrambot.util.TelegramUtil.createMessageTemplate;
 
 /**
  * Clears schedule for user
- *
+ * <p>
  * Available to: Manager, Head, Admin
  */
 @Component
@@ -32,9 +31,10 @@ public class ScheduleClearHandler extends AbstractScheduleHandler {
     @RequiredRoles(roles = {MANAGER, HEAD, ADMIN})
     public List<BotApiMethod<Message>> handle(User user, String message) {
         log.debug("Preparing /SCHEDULE_CLEAR");
-        scheduleService.clear(user.getId());
+        final int count = scheduleService.clear(user.getId());
 
-        return Collections.singletonList(createMessageTemplate(user)
-                .setText("Your schedule was cleared"));
+        return List.of(MessageBuilder.create(user)
+                .text("Your schedule (%d) was cleared", count)
+                .build());
     }
 }
